# opengv_notes

./: .gitignore  CMakeLists.txt
opengv_lib/: CMakeLists.txt
src/relative_pose/: methods.cpp
test/: CMakeLists.txt  random_generators.cpp  test_absolute_pose.cpp  test_point_cloud.cpp
